[project]
name = "latestai-drop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client>=2.5.0",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "schedule>=1.2.2",
]
